<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/dark_background"
    android:orientation="vertical"
    tools:context="example.android.com.musicalstructure.MainActivity">

    <android.support.v7.widget.CardView
        style="@style/cardview"
        android:layout_marginTop="45dp">

        <TextView
            style="@style/text_view"
            android:text="@string/main_description"
            android:textSize="14sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView style="@style/cardview">

        <TextView
            android:id="@+id/now_playing"
            style="@style/text_view"
            android:text="@string/now_playing" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView style="@style/cardview">

        <TextView
            android:id="@+id/playlists"
            style="@style/text_view"
            android:text="@string/playlists" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView style="@style/cardview">

        <TextView
            android:id="@+id/artists"
            style="@style/text_view"
            android:text="@string/artists" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView style="@style/cardview">

        <TextView
            android:id="@+id/albums"
            style="@style/text_view"
            android:text="@string/albums" />
    </android.support.v7.widget.CardView>

</LinearLayout>
